<resources>
    <string name="app_name">Valorant Guide</string>
    <string name="menu_agent">Agent</string>
    <string name="menu_weapon">Weapon</string>
    <string name="menu_map">Map</string>
    <string name="menu_rank">Rank</string>
    <string name="menu_gamemode">Gamemode</string>
    <string name="loading">loading...</string>
    <string name="mode">Mode</string>
    <string name="agent_role">Role</string>
    <string name="agent_name">Name</string>
    <string name="agent_abilities_skills">Abilities/Skills</string>
    <string name="weapon_category">Weapon Category</string>
    <string name="weapon_name">Name</string>
    <string name="weapon_fire_rate">Fire rate</string>
    <string name="weapon_run_speed">Run speed</string>
    <string name="weapon_rds_sec">RDS/SEC</string>
    <string name="weapon_m_sec">M/SEC</string>
    <string name="weapon_equip_speed">Equip speed</string>
    <string name="weapon_sec">SEC</string>
    <string name="weapon_1st_shot_spread">1st shot spread</string>
    <string name="weapon_deg_hip_ads">DEG (HIP/ADS)</string>
    <string name="weapon_reload_speed">Reload speed</string>
    <string name="weapon_magazine">Magazine</string>
    <string name="weapon_rds">RDS</string>
    <string name="weapon_burst_count">Burst Count</string>
    <string name="weapon_zoom">Zoom</string>
    <string name="weapon_x">X</string>
    <string name="weapon_fire_mode">Fire mode</string>
    <string name="weapon_wall_penetration">Wall penetration</string>
    <string name="weapon_price">Price</string>
    <string name="weapon_shotgun_pellet_count">Shotgun pellet count</string>
    <string name="weapon_label_damage">ระยะ\n(เมตร)</string>
    <string name="weapon_damage_head">ศีรษะ</string>
    <string name="weapon_damage_body">ลำตัว</string>
    <string name="weapon_damage_legs">ขา</string>
    <string name="role_e_sport">Role E-sport</string>
    <string name="role_label">หน้าที่</string>
    <string name="property_label">คุณสมบัติ</string>
    <string name="caution_label">ข้อควรระวัง</string>
    <string name="error_label">Error</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="lineup">Lineup</string>
    <string name="by_flashbang">By Flashbang</string>
</resources>