<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_agent"
            android:icon="@drawable/ic_agent"
            android:title="@string/menu_agent" />
        <item
            android:id="@+id/nav_weapon"
            android:icon="@drawable/ic_weapon"
            android:title="@string/menu_weapon" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_rank"
            android:icon="@drawable/ic_rankings"
            android:title="@string/menu_rank" />
        <item
            android:id="@+id/nav_gamemode"
            android:icon="@drawable/ic_gamemode"
            android:title="@string/menu_gamemode" />
    </group>
</menu>