<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.agent.RoleESportFragment"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/role_label"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="14sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_agent"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/agent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="14sp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:id="@+id/property_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/property_label"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/property"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="14sp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/caution_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/caution_label"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/caution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="14sp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/can_played_with_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/can_played_with_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/can_played_with"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="14sp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</LinearLayout>