<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    tools:context=".fragments.agent.AgentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/error_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:paddingVertical="50dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_label"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/error_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:gravity="center_horizontal"
                android:textSize="20sp"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:paddingVertical="10dp"/>

        <LinearLayout
            android:id="@+id/role_container"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agent_role"
                android:textStyle="bold"
                android:layout_marginVertical="10dp"
                android:textSize="18sp"/>

            <View
                android:id="@+id/divider_role"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"/>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout_role"
                app:tabMode="scrollable"
                app:tabGravity="fill"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager_role"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/role_e_sport_container"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/role_e_sport"
                android:textStyle="bold"
                android:layout_marginVertical="10dp"
                android:textSize="18sp"/>

            <View
                android:id="@+id/divider_role_esport"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"/>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout_role_esport"
                app:tabMode="scrollable"
                app:tabGravity="fill"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager_role_esport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>