<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.ValorantGuide.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:title="@string/menu_agent"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.ValorantGuide.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/cover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/menu_agent"
                android:src="@drawable/ic_valorant" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="15dp"
                app:cardElevation="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingVertical="15dp"
                    android:paddingHorizontal="10dp">

                    <TextView
                        android:id="@+id/role"
                        android:layout_gravity="center"
                        android:singleLine="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/agent_role" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_gravity="center"
                        android:singleLine="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:text="@string/agent_name"
                        android:textStyle="bold"/>

                    <View
                        android:id="@+id/divider_name"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        android:id="@+id/desc"
                        android:singleLine="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Description" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        android:text="@string/agent_abilities_skills" />

                    <View
                        android:id="@+id/divider_skills"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewSkill"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                    <TextView
                        android:id="@+id/role_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        android:text="@string/agent_role" />

                    <View
                        android:id="@+id/divider_role"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <ImageView
                        android:id="@+id/role_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/menu_agent"
                        android:src="@drawable/ic_valorant"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"/>

                    <TextView
                        android:id="@+id/role_desc"
                        android:singleLine="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Role Description" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>